- Added '.. avm::' directive for feature structures - Added '.. gloss::' directive for word-aligned glosses. - Added rudementary support for recursive markup in index roles. - Added ':extern:' option to '.. index::' directive; by default, the   directive now builds a local index. - Fixed bug in doctest colorization - Added en/custom_rst.txt, which illustrates the features of rst.py
svn/trunk@4098

--- a/nltkdoc.css
+++ b/nltkdoc.css
@@ -100,3 +100,43 @@ div.note
   font-family: verdana, arial;
   background-color: #b0c4de;
 }
+
+table.avm { border: 0px solid black; width: 0; }
+table.avm tbody tr {border: 0px solid black; }
+table.avm tbody tr td { padding: 2px; }
+table.avm tbody tr td.avm-key { padding: 5px; font-style: normal; }
+table.avm tbody tr td.avm-eq { padding: 5px; }
+table.avm tbody tr td.avm-val { padding: 5px; font-style: italic; }
+table.avm colgroup col { border: 0px solid black; }
+table.avm tbody tr td.avm-topleft 
+    { border-left: 2px solid #000080; border-top: 2px solid #000080; }
+table.avm tbody tr td.avm-botleft 
+    { border-left: 2px solid #000080; border-bottom: 2px solid #000080; }
+table.avm tbody tr td.avm-topright
+    { border-right: 2px solid #000080; border-top: 2px solid #000080; }
+table.avm tbody tr td.avm-botright
+    { border-right: 2px solid #000080; border-bottom: 2px solid #000080; }
+table.avm tbody tr td.avm-left
+    { border-left: 2px solid #000080; }
+table.avm tbody tr td.avm-right
+    { border-right: 2px solid #000080; }
+table.avm tbody tr td.avm-topbotleft
+    { border: 2px solid #000080; border-right: 0px solid black; }
+table.avm tbody tr td.avm-topbotright
+    { border: 2px solid #000080; border-left: 0px solid black; }
+table.avm tbody tr td.avm-ident
+    { font-size: 80%; padding: 0; padding-left: 2px; vertical-align: top; }
+.avm-pointer
+{ border: 1px solid #008000; padding: 1px; color: #008000; 
+  background: #c0ffc0; font-style: normal; }
+
+table.gloss { border: 0px solid black; width: 0; }
+table.gloss tbody tr { border: 0px solid black; }
+table.gloss tbody tr td { border: 0px solid black; }
+table.gloss colgroup col { border: 0px solid black; }
+
+table.rst-example { border: 1px solid black; }
+table.rst-example tbody tr td { background: #eeeeee; }
+table.rst-example thead tr th { background: #c0ffff; }
+td.rst-raw { width: 0; }
+
